--- a/styles/base.css
+++ b/styles/base.css
@@ -181,7 +181,6 @@ select{
     border-radius: 15px;
     margin-bottom: 8%;
     padding-left: 4%;
-    
 }
 
 .submit{
@@ -197,6 +196,24 @@ select{
     font-size: 1.5em;
     margin-bottom: 4%
 }
+
+.homepage-button{
+    width: 80%;
+    border-radius: 15px;
+    background-color: #5fb4d4;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 0 auto;
+    margin-bottom: 4% !important;
+    margin-top: 4% !important;
+    
+}
+
 .recipe-list-item {
     font-weight: 100;
     padding-left: 6%;
