--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,9 @@
 *{
     font-family: 'Noto Sans', sans-serif;
     color: #6c6b6b;
-    margin: 0;
+    margin: 0 ;
+
+    
 }
 
 
@@ -15,7 +17,6 @@ hr{
     width: 100%;
     height: 60px;
     margin-top: 0;
-    /* border-bottom: 1px solid #d5d5d5; */
     box-shadow: 0 10px 50px -15px #333;
     margin: -77px auto 0; 
     padding-bottom: 4%;
@@ -24,7 +25,6 @@ hr{
 
 section{
     width: 95%;
-    /* margin:15%; */
     margin: 0 auto;
 }
 
@@ -151,7 +151,23 @@ section{
     text-decoration: none;
     display: inline-block;
     font-size: 1.15em;
+}
 
+.saved{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 28%;
+    height: 3.5%;
+    border-radius: 15px 0px 0px 0px;
+    background-color: #5fb4d4;
+    border: none;
+    color: white;
+    padding: 1.5px 3.2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.15em;
 }
 
 form{
