--- a/styles/base.css
+++ b/styles/base.css
@@ -12,7 +12,7 @@
     margin: 4%;
 }
 
-hr{
+#nav-hr{
     border:none;
     width: 100%;
     height: 60px;
@@ -245,4 +245,12 @@ select{
 
 .homepage-masthead{
     width: 100%;
+}
+
+.person{
+    margin-bottom: 2%;
+}
+
+.hr{
+ width: 100%;
 }
