--- a/styles/base.css
+++ b/styles/base.css
@@ -170,6 +170,23 @@ section{
     font-size: 1.15em;
 }
 
+.delete-recipe{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 28%;
+    height: 3.5%;
+    border-radius: 15px 0px 0px 0px;
+    background-color: #5fb4d4;
+    border: none;
+    color: white;
+    padding: 1.5px 3.2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.15em;
+}
+
 form{
     display: flex;
     flex-direction: column;
@@ -253,4 +270,10 @@ select{
 
 .hr{
  width: 100%;
+}
+
+#tdee-spot{
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
 }
